--- a/emmaPlugin/emma.gradle
+++ b/emmaPlugin/emma.gradle
@@ -26,10 +26,10 @@ class EmmaPluginConvention{
 	}
 	
 	EmmaPluginConvention(Project project){
-		reportPath 			= "${project.reportsDir.absolutePath}/emma"
+		reportPath 		= "${project.reporting.baseDir.absolutePath}/emma"
 		coverageFileName	= "coverage"
-		tmpDir				= "${project.buildDir}/tmp/emma"
-		instrDir			= "${tmpDir}/instr"
+		tmpDir			= "${project.buildDir}/tmp/emma"
+		instrDir		= "${tmpDir}/instr"
 		metaDataFilePath 	= "${tmpDir}/metadata.emma"
 	}
 }
