created a test-task called emma as opposed to modifying the root test task itself - this should allow builds with both cobertura and emma.

--- a/emmaPlugin/emma.gradle
+++ b/emmaPlugin/emma.gradle
@@ -34,7 +34,7 @@ class EmmaPluginConvention{
 	}
 }
 
-test {
+task emma(type: Test) {
     // add EMMA related JVM args to our tests
     jvmArgs "-XX:-UseSplitVerifier", "-Demma.coverage.out.file=$metaDataFilePath", "-Demma.coverage.out.merge=true"
 
